--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,19 +6,21 @@ services:
     volumes:
       - ../naq_theme:/opt/jboss/keycloak/themes/naq
     ports:
-      - "12000:8080"
+      - "${KEYCLOAK_PORT}:8080"
     environment:
       POSTGRES_DATABASE:
       POSTGRES_USER:
       POSTGRES_PASSWORD:
-      DB_VENDOR: postgres
+      DB_VENDOR: POSTGRES
       POSTGRES_PORT_5432_TCP_ADDR: postgres
+    container_name: naq-keycloak-server
     links:
       - postgres
 
   postgres:
     image: postgres
     restart: always
+    container_name: naq-keycloak-db
     environment:
       POSTGRES_PASSWORD:
       POSTGRES_DB:
