Thème Nouvelle Aquitaine

--- a/naq_theme/login/theme.properties
+++ b/naq_theme/login/theme.properties
@@ -6,7 +6,7 @@ meta=viewport==width=device-width,initial-scale=1
 
 kcHtmlClass=login-pf
 
-kcLogoLink=http://www.entur.org
+kcLogoLink=https://www.nouvelle-aquitaine.fr/
 
 kcContentClass=col-sm-12 col-md-12 col-lg-12 container
 kcContentWrapperClass=row
